# giraffe

./: .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix  version.json
cmake/: MakeExecutableTarget.cmake  MakeLibraryTarget.cmake  Options.cmake  SetupInstall.cmake  Utility.cmake  Version.cmake
cmake/templates/: GiraffeConfig.cmake.in
nix/giraffe/: common.nix  default.nix
nix/support/: cmake-patch.nix
src/core/: CMakeLists.txt  test.cxx
src/testing/: CMakeLists.txt  test.cxx
